# model/Players.model.go
@@ -1,13 +1,14 @@
 package model
 
 import (
+	"github.com/jackc/pgx/v5/pgxpool"
 	"gitlab.com/ribonin/apis/kingshot-redeem/db"
 )
 
 type PlayerResponse struct {
-	Message string    `json:"message"`
-	Type    int       `json:"type"`
-	Player  db.Player `json:"player"`
+	Message string     `json:"message"`
+	Type    int        `json:"type"`
+	Player  PlayerInfo `json:"player"`
 }
 
 type PlayerAPIResponse struct {
@@ -19,7 +20,7 @@ type PlayerAPIResponse struct {
 type PlayerInfo struct {
 	Pid      int32  `json:"pid"`
 	Kid      int32  `json:"kid"`
-	Dname    string `json:"dname,omitempty"`
+	Dname    string `json:"dName,omitempty"`
 	Pfp      string `json:"pfp,omitempty"`
 	Alliance string `json:"alliance,omitempty"`
 }
@@ -39,4 +40,24 @@ type pData struct {
 	LevelRenderedDetailed string `json:"LevelRenderedDetailed"`
 	LevelImage            string `json:"levelImage"`
 	ProfilePhoto          string `json:"profilePhoto"`
+}
+
+type PlayerReqBody struct {
+	Pid      string `json:"pid" validate:"required"`
+	Kid      int    `json:"kid" validate:"required,gte=1"`
+	Alliance string `json:"alliance" `
+}
+type DeletePlayerResponse struct {
+	Pid     string `json:"pid"`
+	Deleted bool   `json:"deleted"`
+}
+type DeletePlayerErrorResponse struct {
+	Pid     string `json:"pid"`
+	Deleted bool   `json:"deleted"`
+	Error   string `json:"error"`
+}
+
+type App struct {
+	Queries *db.Queries
+	Pool    *pgxpool.Pool
 }
